h1. CHANGELOG

h2. 2.6.1 unreleased

* remove warning about incompatible recipes; add a welcome banner

h2. 2.6.0 May 4, 2014

* no need to set app name in 'config/routes.rb' file for Rails 4.1
* set preferences array of secrets for 'learn-rails' app
* add 'rails-signup-download' example application
* create individual recipes for example apps (and remove 'apps4' recipe)
* use 'rails_apps_pages' gem to set up controllers, views, and routing for example apps
* fix 'domain_name' environment variable in 'secrets.yml' file

h2. 2.5.1 April 26, 2014

* use 'rails_apps_testing' gem to configure RSpec and friends in 'tests4' recipe
* install 'binding_of_caller' gem properly for various Ruby versions

h2. 2.5.0 April 22, 2014

* add 'tests4' recipe for simplified setup of test framework
* remove devise_invitable option (pending fix of https://github.com/scambra/devise_invitable/issues/447)
* remove Mongoid as an option for Rails 4.1 (pending further community support)

h2. 2.4.44 April 12, 2014

* use 'example.com' for domain_name in secrets.yml file
* fix for rails-omniauth secrets.yml file
* fix email recipe to restore correct behavior for 'none' option

h2. 2.4.43 April 12, 2014

* add pry as an option (contributed by Stefan Wienert)
* add recipe for deployment with Capistrano (contributed by Stefan Wienert)

h2. 2.4.42 April 11, 2014

* add 'domain_name' to 'config/secrets.yml' file

h2. 2.4.41 April 11, 2014

* updates for Rails 4.1.0 final
* fix for retrieving postgres host value in prefs (contributed by Atsushi Hamtaro Ishida)

h2. 2.4.40 April 4, 2014

* add MRI 2.1 to platforms for binding_of_caller gem (contributed by Chad Ingram)

h2. 2.4.39 April 3, 2014

* update 'megatest' feature to Rails 4.1 and Ruby 2.1 (contributed by Mark D. Blackwell)

h2. 2.4.38 March 7, 2014

* support option for 'Devise confirmable' with Rails 4.1 and Pundit (fixes #287)
* send emails in development mode (reverts #272)

h2. 2.4.37 March 6, 2014
